# semantic-modeling

./: Cargo.toml  LICENSE  config.yml  mira_config.yml  readme.md  requirements.txt
exec/: Cargo.toml
exec/src/: debug.rs  debug_features.rs  debug_model.rs  debug_prediction.rs  experiment.rs  functions.rs  helper.rs  input.rs  main.rs
exec/src/api/: in_mem_db.rs  mod.rs  service.rs
gmtk/: Cargo.toml  build.rs  cobertura.xml  coverage.html
gmtk/ctensor/: CMakeLists.txt  dense_tensor.cpp  dense_tensor.h  main.cpp
gmtk/src/: eval.rs  lib.rs  main.rs  prelude.rs  utils.rs
gmtk/src/graph_models/: mod.rs  models.rs  traits.rs  weights.rs
gmtk/src/graph_models/domains/: binary_vector_domain.rs  boolean_vector_domain.rs  int_domain.rs  mod.rs
gmtk/src/graph_models/factors/: dot_tensor1_factor.rs  group_factor.rs  mod.rs
gmtk/src/graph_models/inferences/: brute_force.rs  mod.rs
gmtk/src/graph_models/utils/: builder.rs  misc.rs  mod.rs
gmtk/src/graph_models/variables/: binary_vector_variable.rs  boolean_vector_variable.rs  mod.rs  (+2 more)
gmtk/src/optimization/: accumulators.rs  adam.rs  batch_example.rs  early_stopping.rs  example.rs  mod.rs  numerical_gradient.rs  optim_traits.rs  sgd.rs  simple_gradient_descent.rs
gmtk/src/tensors/: mod.rs  tensor_index.rs  tensor_type.rs  utils.rs
gmtk/tests/: runner.rs
gmtk/tests/graph_models/: mod.rs
gmtk/tests/optimization/: mod.rs  nll_example.rs  sample_model.rs
gmtk/tests/tensors/: dense_tensor.rs  mod.rs  utils.rs
mira/: Cargo.toml
mira/resources/assembling/: museum-crm-s01-s14-rust-input.json
mira/src/: debug_utils.py  debug_utils.rs  lib.rs  prelude.rs  utils.rs
mira/src/assembling/: interactive_modeling.rs  mod.rs  predicting.rs  tests.rs
mira/src/evaluation_metrics/: mod.rs  semantic_labeling.rs
mira/src/settings/: conf_features.rs  conf_misc.rs  conf_mrf.rs  conf_predicting.rs  conf_ranking.rs  conf_search.rs  mod.rs
mira/tests/: runner.rs
mira/tests/assembling/: mod.rs
mira/tests/evaluation_metrics/: mod.rs  semantic_modeling.rs
(+702 files in other folders)
