[package]
name = "exec"
version = "0.1.0"
authors = [""]

[dependencies]
mira = { path = "../mira" }
algorithm = { path = "../algorithm" }
rdb2rdf = { path = "../rdb2rdf" }
gmtk = { path = "../gmtk" }
prettytable-rs = "0.7.0"
clap = "2.*"
csv = "1"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
serde_yaml = "0.*"
fnv = "1.0.6"
time = "0.1.40"
log = "0.4.1"
env_logger = "0.5.10"
itertools = "0.7.8"
im = "11.*"
error-chain = "0.12.0"
zmq = "0.8"
