[package]
name = "gmtk"
version = "0.1.0"
authors = ["rook"]
publish = false

[dependencies]
algorithm = { path = "../algorithm" }
libc = "0.2.0"
num-traits = "0.2.4"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
bincode = "1.0.0"
uuid = { version = "0.6.4", features = ["v4", "v5"] }
fnv = "1.0.6"
rand = "0.5.0"
time = "0.1.40"
rayon = "1.0.1"