[package]
name = "mira"
version = "0.1.0"
authors = [""]
publish = false

# [profile.release]
# debug = false

[dependencies]
rdb2rdf = { path = "../rdb2rdf" }
gmtk = { path = "../gmtk" }
algorithm = { path = "../algorithm" }
regex = "1"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
serde_yaml = "0.7.*"
fnv = "1.0.6"
itertools = "0.7.8"
permutohedron = "0.2.4"
log = "0.4.1"
im = "11.*"
time = "0.1.40"
rayon = "1.0.1"
rusty-machine = "0.5.4"
simple_logger = "0.5.0"
rand = "0.5.0"
bincode = "1.0.0"
ndarray = { version = "0.11.*", features = ["serde-1"] }